# api.yml
@@ -3,7 +3,8 @@ info:
   title: User Service API
   version: 1.0.0
   description: API for user registration, login, and profile management.
-
+servers:
+  - url: http://localhost:8080
 paths:
   /register:
     post:
@@ -101,3 +102,34 @@ components:
         - phone_number
         - full_name
         - password
+    UserLogin:
+      type: object
+      properties:
+        phone_number:
+          type: string
+        password:
+          type: string
+      required:
+        - phone_number
+        - password
+    LoginResponse:
+      type: object
+      properties:
+        user_id:
+          type: integer
+        jwt_token:
+          type: string
+      required:
+        - user_id
+        - jwt_token
+    UserProfileUpdate:
+      type: object
+      properties:
+        phone_number:
+          type: string
+          minLength: 10
+          maxLength: 13
+        full_name:
+          type: string
+          minLength: 3
+          maxLength: 60
